# ExpSupInterviewer

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  propmt.txt  pyproject.toml  requirements.txt  start.bat  start.ps1  start_backend.bat  tsconfig.app.json  vite.config.ts
backend/: config.example.yaml  config.py  db.py  main.py  models.py  pdf_generator.py  schemas.py
backend/behavior_tree/: __init__.py  blackboard.py  nodes.py  tree.py
backend/eas/: __init__.py  embedder.py  similarity.py
backend/interview/: decision_tree.py  graph.py  question_bank.py
backend/llm/: pydantic_agents.py
backend/match/: matcher.py
backend/repositories/: crud.py  llm_config.py
backend/resume/: parser.py
src/: App.tsx  index.css  main.tsx
src/components/: ChatBubble.tsx  DecisionDetail.tsx  DecisionTree.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx  MatchReport.tsx  ResumeUploader.tsx  ScoreCard.tsx  SuggestionCard.tsx  ThemeToggle.tsx  ThinkingProcess.tsx  Timeline.tsx
src/components/charts/: ProgressChart.tsx  RadarChart.tsx  RingChart.tsx
src/hooks/: useTypewriter.ts
src/i18n/: index.ts  useTranslation.ts
src/pages/: Home.tsx  Interview.tsx  Prepare.tsx  Replay.tsx  Report.tsx  Settings.tsx
src/services/: api.ts  storage.ts
src/store/: appStore.ts  interviewStore.ts  reportStore.ts
src/theme/: ThemeContext.ts  ThemeProvider.tsx  useTheme.ts
src/types/: index.ts  interview.ts  report.ts  resume.ts  settings.ts
test/: job_descriptions.md  resume_java.md  resume_python.md  resume_react.md
(+7 files in other folders)
